media queries added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,10 +15,12 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
+    
+    <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
     <header class="header">
-      <h1 class="heading-primary">Kartik Nema (knema231@gmail.com)</h1>
+      <h1 class="heading-primary">Kartik Nema</h1>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li class="main-nav-list-item">
@@ -51,6 +53,37 @@
         </ul>
       </nav>
     </header>
+    <div class="links-tab">
+      <div class="icon-link-bottom">
+        <ion-icon class="nav-icons" name="logo-github"></ion-icon>
+            <a
+              class="main-nav-link"
+              href="https://github.com/Kartik2301?tab=repositories"
+              target="_blank"
+              >Github</a
+            >
+      </div>
+      <hr>
+      <div class="icon-link-bottom">
+        <ion-icon class="nav-icons" name="logo-linkedin"></ion-icon>
+            <a
+              class="main-nav-link"
+              href="https://www.linkedin.com/in/kartik-nema-187176173/"
+              target="_blank"
+              >LinkedIn</a
+            >
+      </div>
+      <hr>
+      <div class="icon-link-bottom">
+        <ion-icon class="nav-icons" name="reader-outline"></ion-icon>
+        <a
+          class="main-nav-link"
+          href="https://drive.google.com/file/d/1gDmnRc49rKXTbS0FQxw13sF_bUbyLbCU/view?usp=sharing"
+          target="_blank"
+          >Resume</a
+        >
+      </div>
+    </div>
 
     <main>
       <section class="section-info">
@@ -84,48 +117,13 @@
           </div>
           <div class="main-info-items">
             <h3 class="subheading">SKILLS & EDUCATION</h3>
-            <div class="grid education-grid--2-cols">
-              <div>
-                <ul class="skill-ed-list">
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-heading">Course</p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">
-                      B.tech in I.T (2018-22)
-                    </p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">Class XII (2018)</p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">Class X (2016)</p>
-                  </li>
-                </ul>
-              </div>
-              <div>
-                <ul class="skill-ed-list">
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-heading">College/School</p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">
-                      Indian Institute of Information Technology Allahabad
-                    </p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">
-                      Central Academy School, Jabalpur
-                    </p>
-                  </li>
-                  <li class="skill-ed-list-item">
-                    <p class="skill-ed-list-item-text">
-                      Joy Senior Secondary School, Jabalpur
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </div>
+            
+            <p class="skill-ed-list-item-text"><b>B.tech in I.T (2018-22)</b> &nbsp; - &nbsp; Indian Institute of Information Technology Allahabad</p>
+            <br>
+            <p class="skill-ed-list-item-text"><b>Class XII (2018)</b> &nbsp; - &nbsp; Central Academy School, Jabalpur</p>
+            <br>
+            <p class="skill-ed-list-item-text"><b>Class X (2016)</b> &nbsp; - &nbsp; Joy Senior Secondary School, Jabalpur</p>
+
             <p class="margin-top-md technology-heading">
               Following are the technologies I have already worked with
             </p>
