changed dir structure

--- a/Front End Projects/Portfolio/index.html
+++ b/Front End Projects/Portfolio/index.html
@@ -89,28 +89,15 @@
           <div class="main-info-items">
             <h3 class="subheading">ABOUT ME</h3>
             <p class="hero-description">
-              Hey there, my name is Kartik Nema 23, currently working as a
-              Software Developer Intern at
-              <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>. I am
-              in the 8th and final semester of the B.Tech program offered by
-              <a href="https://www.iiita.ac.in/">IIIT Allahabad</a>. The subject
-              of my major is Information Technology, I'll be graduating in a
-              period of 5-6 months.<br /><br />Technology has always fascinated
-              me, The idea that you can have the entire world at your
-              fingertips, the idea that one can Connect with someone else at the
-              other end of the world, in a few basic steps, the idea that one
-              can order whatever they need, be it groceries, clothes, medicines
-              and a lot more by just a few button clicks, all of this is is
-              truly incredible. Advances in technology, specially with regards
-              to Medical, banking and collaboration fields, have helped the
-              world a great bit in dealing with the Covid-19 Pandemic thus far,
-              and as our fight goes on technology will play an even bigger part
-              in the future. <br /><br />
-              It was this fascination, which led me to opting for the
-              Information Technology branch, my goal throughout has been to
-              design technologies which helps the society, which help to solve
-              problems which people might be facing, it also involves making
-              technology more accessible.
+              Hi, my name is Kartik Nema 23, currently working as a
+              SDE at
+              <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>. I have
+              completed my B.Tech in IT (Information Technology) from
+              <a href="https://www.iiita.ac.in/">IIIT Allahabad</a>.<br /><br />
+              I am an engineer by heart and like to play around with Tech a lot. I like to use my technical skill in order to solve real world problems, design solutions which are efficient and easily manageable. 
+              I have worked with a variety of technologies during my college years and now at my job. I strive to learn more and more and continously improve my self not only as a developer.<br><br>
+              In case you would like to reach out to me, then you will find the handles mentioned at the top handy. You can also contact me at <b><i>knem7554@gmail.com</i></b>
+              <br>Thanks for your time, and have a nice day.
             </p>
           </div>
           <div class="main-info-items">
