layout minor modifications

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -93,11 +93,18 @@
               SDE at
               <a href="https://www.cisco.com/c/en_in/index.html">Cisco</a>. I have
               completed my B.Tech in IT (Information Technology) from
-              <a href="https://www.iiita.ac.in/">IIIT Allahabad</a>.<br /><br />
-              I am an engineer by heart and like to play around with Tech a lot. I like to use my technical skill in order to solve real world problems, design solutions which are efficient and easily manageable. 
-              I have worked with a variety of technologies during my college years and now at my job. I strive to learn more and more and continously improve my self not only as a developer.<br><br>
+              <a href="https://www.iiita.ac.in/">IIIT Allahabad</a>.
+              <br><br>
+              I am an engineer by heart and like to play around with Tech a lot. 
+              I like to use my technical skill in order to solve real world problems, design solutions which are efficient and easily manageable. 
+              I have worked with a variety of technologies during my college years and now at my job.
+              <br><br>
+              It was my fascination with modern tech, which led me to opting for the Information Technology branch, my goal throughout has been to design technologies which helps the society, which help to solve problems which people might be facing, it also involves making technology more accessible. 
+              <br><br>
+              As time followed, I learned more about different programming languages, different tech frameworks, and simultaneously college courses like DSA, DBMS, OOM, OS gave me a better understanding of this enormous field of IT. 
+              This curosity, has always pushed me to learn more, become better, and more importantly not stop. I strive to learn more and more and continously improve my self not only as a developer.
+              <br><br>
               In case you would like to reach out to me, then you will find the handles mentioned at the top handy. You can also contact me at <b><i>knem7554@gmail.com</i></b>
-              <br>Thanks for your time, and have a nice day.
             </p>
           </div>
           <div class="main-info-items">
