--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -445,7 +445,7 @@
     <footer class="footer">
       <div class="space-around no-space-btm">
         <h3 class="heading-tertiary">Leave a Message</h3>
-        <form id="contactForm" method="POST" enctype="multipart/form-data">
+        <form id="contactForm" method="POST">
           <div class="cta-form">
             <div>
               <input
