added api support

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -382,6 +382,30 @@
                     </a>
                     <p class="blog-date">08.12.2019</p>
                   </div>
+                  <div class="blog">
+                    <a href="https://medium.com/@kartik_nema/django-a-quick-starter-487402221d1c">
+                      <p class="blog-title">
+                        Django: A Quick Starter
+                      </p>
+                    </a>
+                    <p class="blog-date">13.01.2023</p>
+                  </div>
+                  <div class="blog">
+                    <a href="https://medium.com/@kartik_nema/django-shorts-uploading-images-to-cloud-storage-3ad799489eec">
+                      <p class="blog-title">
+                        Django Shorts : Uploading images to cloud storage
+                      </p>
+                    </a>
+                    <p class="blog-date">26.01.2023</p>
+                  </div>
+                  <div class="blog">
+                    <a href="https://medium.com/@kartik_nema/django-shorts-image-upload-from-local-computer-via-form-input-526f46405683">
+                      <p class="blog-title">
+                        Django Shorts: Image Upload from local computer via Form Input
+                      </p>
+                    </a>
+                    <p class="blog-date">31.01.2023</p>
+                  </div>
                 </div>
 
                 <div class="bookshelf">
