--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -317,6 +317,49 @@
         </div>
         <hr class="portfolio-section-end" />
       </section>
+
+      <section>
+        <div class="space-around">
+          <h3 class="heading-tertiary">Certifications</h3>
+          <div class="grid grid--4-cols gap-sm">
+            <div class="portfolio-item">
+              <a href="https://drive.google.com/drive/folders/1XLO6-9Vh-Mud_WPXHZN0CqwShjoQK9KJ?usp=sharing">
+                <img
+                  class="portfolio-image"
+                  src="img/portfolio/aws_saa.png"
+                  alt=""
+                />
+                <div class="portolio-item-content">
+                  <div class="tech-tags">
+                    <span class="tag tag--flutter">09-03-23</span>
+                    <span class="tag tag--firebase">SAA-C03</span>
+                  </div>
+                  <p class="portoflio-item-title">AWS Certified Solutions Architect - Associate</p>
+                </div>
+              </a>
+            </div>
+
+            <div class="portfolio-item">
+              <a href="https://drive.google.com/drive/folders/1mS85wK0H7WEy5fy8EuHi4khofhpizjml?usp=sharing">
+                <img
+                  class="portfolio-image"
+                  src="img/portfolio/aws_ccp.png"
+                  alt=""
+                />
+                <div class="portolio-item-content">
+                  <div class="tech-tags">
+                    <span class="tag tag--flutter">01-08-22</span>
+                    <span class="tag tag--firebase">CLF-C01</span>
+                  </div>
+                  <p class="portoflio-item-title">AWS Certified Cloud Practitioner</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <hr class="portfolio-section-end" />
+      </section>
+
       <section class="section-blog-books">
         <div class="space-around">
           <div class="bb-content">
@@ -406,13 +449,21 @@
                     </a>
                     <p class="blog-date">31.01.2023</p>
                   </div>
-				  <div class="blog">
+				          <div class="blog">
                     <a href="https://medium.com/@kartik_nema/pwa-progressive-web-apps-a0613904d953">
                       <p class="blog-title">
                         PWA: Progressive Web Apps
                       </p>
                     </a>
                     <p class="blog-date">24.02.2023</p>
+                  </div>
+                  <div class="blog">
+                    <a href="https://medium.com/@kartik_nema/push-notifications-using-firebase-cloud-messaging-90638eae4abf">
+                      <p class="blog-title">
+                        Push Notifications using Firebase Cloud Messaging
+                      </p>
+                    </a>
+                    <p class="blog-date">01.03.2023</p>
                   </div>
                 </div>
 
