Update and rename GRAPH.md to GRAPH.html

--- a/algorithms/interview prep/GRAPH.html
+++ b/algorithms/interview prep/GRAPH.html
@@ -1,4 +1,10 @@
-BFS Breadth First Search
+<!doctype html>
+<head>
+  
+</head>
+
+<body>
+  BFS Breadth First Search
 
 Use Cases: Shortest path in an unweighted graph, Shortest path in a grid, Can be used to find the shortest weight in a graph with binary edge weights (https://cp-algorithms.com/graph/01_bfs.html)
   1. https://www.geeksforgeeks.org/problems/bfs-traversal-of-graph/1?page=1&category=BFS&sortBy=submissions
@@ -74,3 +80,5 @@ Path Based Questions:
 8. Single source shortest path algorithms: Dijkstra, Bellman Ford
 9. All shource shortest path algorithms: Floyd Warshall
 10. Find all the paths to a destination in a directed / undirected graph containing cycles (not a DAG): Backtracking, DP based solutions.
+
+</body>
