--- a/algorithms/interview prep/GRAPH.html
+++ b/algorithms/interview prep/GRAPH.html
@@ -1,4 +1,6 @@
 <!doctype html>
+
+<html>
 <head>
   
 </head>
@@ -82,3 +84,4 @@ Path Based Questions:
 10. Find all the paths to a destination in a directed / undirected graph containing cycles (not a DAG): Backtracking, DP based solutions.
 
 </body>
+</html>
